Fix for Issue https://github.com/Grafeas/Grafeas/issues/31
